--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -11,6 +11,7 @@ body {
 	font-size: 18px;
     color: #666666;
     background-color: #f4f4f4;
+    user-select: none;
 }
 
 p, q { line-height: 1.8; }
