--- a/css/loader.css
+++ b/css/loader.css
@@ -2,46 +2,60 @@
     width: 64px;
     height: 64px;
     position: absolute;
-    background: #d0d0d0;
+    background: #afafaf;
     border-radius: 4px;
     overflow: hidden;
     top: 50%;
     left: 50%;
     display: none;
+    z-index: 999 !important; /* 确保遮罩在最上层 */
   }
-  .loader2:before {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 40px;
-    height: 40px;
-    transform: rotate(45deg) translate(30%, 40%);
-    background: #c25454;
-    box-shadow: 32px -34px 0 5px #993333;
-    animation: slide 2s infinite ease-in-out alternate;
-  }
-  .loader2:after {
-    content: "";
-    position: absolute;
-    left: 10px;
-    top: 10px;
-    width: 16px;
-    height: 16px;
-    border-radius: 50%;
-    background: #993333;
-    transform: rotate(0deg);
-    transform-origin: 35px 145px;
-    animation: rotate 2s infinite ease-in-out;
-  }
+.loader2:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 40px;
+  height: 40px;
+  transform: rotate(45deg) translate(30%, 40%);
+  background: #c25454;
+  box-shadow: 32px -34px 0 5px #993333;
+  animation: slide 2s infinite ease-in-out alternate;
+}
+.loader2:after {
+  content: "";
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #993333;
+  transform: rotate(0deg);
+  transform-origin: 35px 145px;
+  animation: rotate 2s infinite ease-in-out;
+}
 
-  @keyframes slide {
-    0% , 100%{ bottom: -35px}
-    25% , 75%{ bottom: -2px}
-    20% , 80%{ bottom: 2px}
-  }
-  @keyframes rotate {
-    0% { transform: rotate(-15deg)}
-    25% , 75%{ transform: rotate(0deg)}
-    100% {  transform: rotate(25deg)}
-  }
+@keyframes slide {
+  0% , 100%{ bottom: -35px}
+  25% , 75%{ bottom: -2px}
+  20% , 80%{ bottom: 2px}
+}
+@keyframes rotate {
+  0% { transform: rotate(-15deg)}
+  25% , 75%{ transform: rotate(0deg)}
+  100% {  transform: rotate(25deg)}
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* 半透明黑色 */
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 990;
+}
